fix: make x coordinate column visible on mobile resolution

--- a/application-frontend/src/app/features/panel/components/results-table/results-table.component.css
+++ b/application-frontend/src/app/features/panel/components/results-table/results-table.component.css
@@ -18,7 +18,11 @@
 }
 
 .table-container__mobile {
-    height: 400px;
-    width: 500px;
+    height: 340px;
+    width: 300px;
+}
+
+table-container__mobile table {
+    max-width: 280px;
 }
 
